--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-gnutls.c에서 SSL/TLS 관련 부분 삭제\
-HTTPS, OPEN SSL, FTPS, SSL/TLS와 관련된 부분을 제거\
+gnutls.c에서 SSL/TLS 관련 부분 삭제
+HTTPS, OPEN SSL, FTPS, SSL/TLS와 관련된 부분을 제거
 프록시 서버 관련 부분 제거
 
 
